# db-operation-rust

./: .env  Cargo.toml
src/: main.rs
src/migrations/2020-03-09-134857_create_employees/: up.sql
src/migrations/2020-03-10-134857_create_users/: up.sql
src/model/: employee_model.rs  mod.rs  routes.rs  schema.rs  user_model.rs
