[package]
name = "diesel_demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.1.0"
actix-rt = "2.7.0"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
diesel = { version = "1.4", features = ["postgres", "r2d2", "uuid", "chrono"] }
diesel_migrations = "1.4"
env_logger = "0.9"
lazy_static = "1.4"
listenfd = "1.0"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
r2d2 = "0.8"
uuid = { version = "1.1.2", features = ["serde", "v4"] }
